# ai-research-agent

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: COMMIT_STRATEGY.md
k8s/: deployment.yaml
scripts/: setup_repos.py  test_e2e.py  test_github_pr.py  test_k8s_pod.py  test_local.py  test_notion_spec.py
src/: main.py
src/core/: __init__.py  config.py  github_code_reference.py  models.py
src/integrations/: __init__.py  claude_client.py  mlflow_client.py  slack_bot.py
src/k8s/: __init__.py  pod_launcher.py  resource_manager.py
src/mcp/: __init__.py  server.py
src/mcp/tools/: __init__.py  code_generator.py  evaluator.py  experiment.py  github.py  spec_analyzer.py  workflow_parser.py
